# rightscrapex

./: .gitignore  Cargo.toml  GEMINI.md  README.md  justfile
src/: main.rs
