[package]
name = "rightscrapex"
version = "0.4.1"
authors = ["blakehawkins"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Read rightmove property URLs from stdin, emit acceptable rightmove result URLs"
homepage = "https://github.com/blakehawkins/rightscrapex"
repository = "https://github.com/blakehawkins/rightscrapex"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
oops = "0.2"
select = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stdinix = "0.1"
ureq = "2.8"
